trunk/eclipse_projects/oberon_interpreter_1_0_incubation/Parser.cpp
/*----------------------------------------------------------------------
Oberon2 compiler for x86
Copyright (c) 2012 Evgeniy Grigorievitch Philippov
Distributed under the terms of GNU General Public License, v.3 or later

Compiler Generator Coco/R,
Copyright (c) 1990, 2004 Hanspeter Moessenboeck, University of Linz
extended by M. Loeberbauer & A. Woess, Univ. of Linz
ported to C++ by Csaba Balazs, University of Szeged
with improvements by Pat Terry, Rhodes University

This program is free software; you can redistribute it and/or modify it 
under the terms of the GNU General Public License as published by the 
Free Software Foundation; either version 2, or (at your option) any 
later version.

This program is distributed in the hope that it will be useful, but 
WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY 
or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License 
for more details.

You should have received a copy of the GNU General Public License along 
with this program; if not, write to the Free Software Foundation, Inc., 
59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

As an exception, it is allowed to write an extension of Coco/R that is
used as a plugin in non-free software.

If not otherwise stated, any source code generated by Coco/R (other than 
Coco/R itself) does not fall under the GNU General Public License.
-----------------------------------------------------------------------*/


#include <wchar.h>
#include "Parser.h"
#include "Scanner.h"


namespace Oberon {


void Parser::SynErr(int n) {
	//if (errDist >= minErrDist)
		errors->SynErr(la->line, la->col, n);
	errDist = 0;
}

void Parser::SemErr(const wchar_t* msg) {
	//if (errDist >= minErrDist)
		errors->Error(t->line, t->col, msg);
	errDist = 0;
}

void Parser::Get() {
	for (;;) {
		t = la;
		la = scanner->Scan();
		if (la->kind <= maxT) { ++errDist; break; }

		if (dummyToken != t) {
			dummyToken->kind = t->kind;
			dummyToken->pos = t->pos;
			dummyToken->col = t->col;
			dummyToken->line = t->line;
			dummyToken->next = NULL;
			coco_string_delete(dummyToken->val);
			dummyToken->val = coco_string_create(t->val);
			t = dummyToken;
		}
		la = t;
	}
}

void Parser::Expect(int n) {
	if (la->kind==n) Get(); else { SynErr(n); }
}

void Parser::ExpectWeak(int n, int follow) {
	if (la->kind == n) Get();
	else {
		SynErr(n);
		while (!StartOf(follow)) Get();
	}
}

bool Parser::WeakSeparator(int n, int syFol, int repFol) {
	if (la->kind == n) {Get(); return true;}
	else if (StartOf(repFol)) {return false;}
	else {
		SynErr(n);
		while (!(StartOf(syFol) || StartOf(repFol) || StartOf(0))) {
			Get();
		}
		return StartOf(syFol);
	}
}

void Parser::number(numberRecord &r) {
		if (la->kind == _integer) {
			IntegerRec(r.tokenString);
			r.numtype=num_int; 
		} else if (la->kind == _real) {
			RealRec(r.tokenString);
			r.numtype=num_real; 
		} else SynErr(68);
}

void Parser::IntegerRec(wchar_t* &tok) {
		Integer(tok);
}

void Parser::RealRec(wchar_t* &tok) {
		Real(tok);
}

void Parser::Relation(int &op) {
		op = illegal_operator; 
		switch (la->kind) {
		case 7 /* "=" */: {
			Get();
			op = equals; 
			break;
		}
		case 8 /* "#" */: {
			Get();
			op = notEquals; 
			break;
		}
		case 9 /* "<" */: {
			Get();
			op = less; 
			break;
		}
		case 10 /* "<=" */: {
			Get();
			op = lessOrEqual; 
			break;
		}
		case 11 /* ">" */: {
			Get();
			op = greater; 
			break;
		}
		case 12 /* ">=" */: {
			Get();
			op = greaterOrEqual; 
			break;
		}
		case 13 /* "IN" */: {
			Get();
			op = in; 
			break;
		}
		case 14 /* "IS" */: {
			Get();
			op = is; 
			break;
		}
		default: SynErr(69); break;
		}
}

void Parser::AddOp(int &op) {
		op = illegal_operator; 
		if (la->kind == 15 /* "+" */) {
			Get();
			op = plus; 
		} else if (la->kind == 16 /* "-" */) {
			Get();
			op = minus; 
		} else if (la->kind == 17 /* "OR" */) {
			Get();
			op = orOperation; 
		} else SynErr(70);
}

void Parser::MulOp(int &op) {
		op = illegal_operator; 
		if (la->kind == 18 /* "*" */) {
			Get();
			op = times; 
		} else if (la->kind == 19 /* "/" */) {
			Get();
			op = slash; 
		} else if (la->kind == 20 /* "DIV" */) {
			Get();
			op = divOp; 
		} else if (la->kind == 21 /* "MOD" */) {
			Get();
			op = modOp; 
		} else if (la->kind == 22 /* "&" */) {
			Get();
			op = ampersand; 
		} else SynErr(71);
}

void Parser::Expr(ExprRecord &expr) {
		SimpleExpr(expr.lhs);
		if (StartOf(1)) {
			expr.opAndRhsPresent=true; 
			Relation(expr.op);
			SimpleExpr(expr.rhs);
		} else if (StartOf(2)) {
			expr.opAndRhsPresent=false; 
		} else SynErr(72);
}

void Parser::SimpleExpr(SimpleExprRecord &e) {
		if (StartOf(3)) {
			if (StartOf(4)) {
			} else {
				Get();
			}
			e.minus=false; 
		} else if (la->kind == 16 /* "-" */) {
			Get();
			e.minus=true; 
		} else SynErr(73);
		Term(e.term);
		if (StartOf(5)) {
			e.nullOrNextSimpleExprAddOpRecord=0; 
		} else if (la->kind == 15 /* "+" */ || la->kind == 16 /* "-" */ || la->kind == 17 /* "OR" */) {
			e.nullOrNextSimpleExprAddOpRecord=new SimpleExprAddOpRecord(); abortIfNull(e.nullOrNextSimpleExprAddOpRecord); 
			SimpleExprAddOpClause(*e.nullOrNextSimpleExprAddOpRecord);
		} else SynErr(74);
}

void Parser::ConstExpr(ConstExprRecord &cexpr) {
		cexpr.valueHasBeenCalculated=false; 
		Expr(cexpr.expr);
}

void Parser::ModuleImportEntry(ModuleImportEntryRecord &r) {
		Ident(r.lhs);
		if (la->kind == 24 /* "," */ || la->kind == 26 /* ";" */) {
			r.rhsPresent=false; 
		} else if (la->kind == 23 /* ":=" */) {
			r.rhsPresent=true; 
			Get();
			Ident(r.rhs);
		} else SynErr(75);
}

void Parser::Ident(wchar_t* &tok) {
		Expect(_ident);
		tok = coco_string_create(t->val); 
}

void Parser::ModuleImportEntryList(ImportListRecord &r) {
		ModuleImportEntry(r.moduleImportEntry);
		if (la->kind == 26 /* ";" */) {
			r.nullOrPtrToNextModuleImportEntriesList=0; 
		} else if (la->kind == 24 /* "," */) {
			r.nullOrPtrToNextModuleImportEntriesList=new ImportListRecord(); abortIfNull(r.nullOrPtrToNextModuleImportEntriesList); 
			Get();
			ModuleImportEntryList(*(r.nullOrPtrToNextModuleImportEntriesList));
		} else SynErr(76);
}

void Parser::ImportList(ImportListRecord &r) {
		Expect(25 /* "IMPORT" */);
		ModuleImportEntryList(r);
		Expect(26 /* ";" */);
}

void Parser::DeclSeqConstDeclListMandatory(DeclSeqConstDeclListMandatoryRecord &r) {
		ConstDecl(r.constDecl);
		Expect(26 /* ";" */);
		if (StartOf(6)) {
			r.nullOrPtrToNextDeclSeqConstDeclListMandatory=0; 
		} else if (la->kind == _ident) {
			r.nullOrPtrToNextDeclSeqConstDeclListMandatory=new DeclSeqConstDeclListMandatoryRecord(); 
			abortIfNull(r.nullOrPtrToNextDeclSeqConstDeclListMandatory);
			
			DeclSeqConstDeclListMandatory(*(r.nullOrPtrToNextDeclSeqConstDeclListMandatory));
		} else SynErr(77);
}

void Parser::ConstDecl(ConstDeclRecord &r) {
		IdentDef(r.identDef);
		if (la->kind == 7 /* "=" */) {
			r.typePtr=0; 
		} else if (la->kind == 31 /* ":" */) {
			Get();
			Type(r.typePtr);
		} else SynErr(78);
		Expect(7 /* "=" */);
		ConstExpr(r.expr);
}

void Parser::DeclSeqConstDeclList(DeclSeqConstDeclListRecord &r) {
		if (StartOf(6)) {
			r.specified=false; 
		} else if (la->kind == _ident) {
			r.specified=true; 
			DeclSeqConstDeclListMandatory(r.constDecls);
		} else SynErr(79);
}

void Parser::DeclSeqTypeDeclListMandatory(DeclSeqTypeDeclListMandatoryRecord &r) {
		TypeDecl(r.typeDecl);
		Expect(26 /* ";" */);
		if (StartOf(6)) {
			r.nullOrPtrToNextDeclSeqTypeDeclListMandatory=0; 
		} else if (la->kind == _ident) {
			r.nullOrPtrToNextDeclSeqTypeDeclListMandatory=new DeclSeqTypeDeclListMandatoryRecord(); 
			abortIfNull(r.nullOrPtrToNextDeclSeqTypeDeclListMandatory);
			
			DeclSeqTypeDeclListMandatory(*(r.nullOrPtrToNextDeclSeqTypeDeclListMandatory));
		} else SynErr(80);
}

void Parser::TypeDecl(TypeDeclRecord &r) {
		IdentDef(r.identDef);
		Expect(7 /* "=" */);
		Type(r.typePtr);
}

void Parser::DeclSeqTypeDeclList(DeclSeqTypeDeclListRecord &r) {
		if (StartOf(6)) {
			r.specified=false; 
		} else if (la->kind == _ident) {
			r.specified=true; 
			DeclSeqTypeDeclListMandatory(r.typeDecls);
		} else SynErr(81);
}

void Parser::DeclSeqVarDeclListMandatory(DeclSeqVarDeclListMandatoryRecord &r) {
		VarDecl(r.varDecl);
		Expect(26 /* ";" */);
		if (StartOf(6)) {
			r.nullOrPtrToNextDeclSeqVarDeclListMandatory=0; 
		} else if (la->kind == _ident) {
			r.nullOrPtrToNextDeclSeqVarDeclListMandatory=new DeclSeqVarDeclListMandatoryRecord(); 
			abortIfNull(r.nullOrPtrToNextDeclSeqVarDeclListMandatory);
			
			DeclSeqVarDeclListMandatory(*(r.nullOrPtrToNextDeclSeqVarDeclListMandatory));
		} else SynErr(82);
}

void Parser::VarDecl(VarDeclRecord &r) {
		IdentList(r.identList);
		Expect(31 /* ":" */);
		Type(r.typePtr);
}

void Parser::DeclSeqVarDeclList(DeclSeqVarDeclListRecord &r) {
		if (StartOf(6)) {
			r.specified=false; 
		} else if (la->kind == _ident) {
			r.specified=true; 
			DeclSeqVarDeclListMandatory(r.varDecls);
		} else SynErr(83);
}

void Parser::DeclSeqConstTypeVarListMandatory(DeclSeqConstTypeVarListMandatoryRecord &r) {
		if (la->kind == 27 /* "CONST" */) {
			Get();
			DeclSeqConstDeclList(r.constDeclList);
			r.decl_variant=decl_const; 
		} else if (la->kind == 28 /* "TYPE" */) {
			Get();
			DeclSeqTypeDeclList(r.typeDeclList);
			r.decl_variant=decl_type; 
		} else if (la->kind == 29 /* "VAR" */) {
			Get();
			DeclSeqVarDeclList(r.varDeclList);
			r.decl_variant=decl_var; 
		} else SynErr(84);
		if (la->kind == 30 /* "PROCEDURE" */ || la->kind == 32 /* "BEGIN" */ || la->kind == 33 /* "END" */) {
			r.next=0; 
		} else if (la->kind == 27 /* "CONST" */ || la->kind == 28 /* "TYPE" */ || la->kind == 29 /* "VAR" */) {
			r.next=new DeclSeqConstTypeVarListMandatoryRecord(); abortIfNull(r.next); 
			DeclSeqConstTypeVarListMandatory(*(r.next));
		} else SynErr(85);
}

void Parser::DeclSeqConstTypeVarList(DeclSeqConstTypeVarListRecord &r) {
		if (la->kind == 30 /* "PROCEDURE" */ || la->kind == 32 /* "BEGIN" */ || la->kind == 33 /* "END" */) {
			r.specified=false; 
		} else if (la->kind == 27 /* "CONST" */ || la->kind == 28 /* "TYPE" */ || la->kind == 29 /* "VAR" */) {
			r.specified=true; 
			DeclSeqConstTypeVarListMandatory(r.constTypeVarList);
		} else SynErr(86);
}

void Parser::DeclSeqProcDeclFwdDeclListMandatory(DeclSeqProcDeclFwdDeclListMandatoryRecord &r) {
		Expect(30 /* "PROCEDURE" */);
		if (la->kind == _ident || la->kind == 35 /* "(" */) {
			ProcDecl(r.procDecl);
			r.decl_variant=decl_proc; 
		} else if (la->kind == 34 /* "^" */) {
			ForwardDecl(r.fwdDecl);
			r.decl_variant=decl_fwd; 
		} else SynErr(87);
		Expect(26 /* ";" */);
		if (la->kind == 32 /* "BEGIN" */ || la->kind == 33 /* "END" */) {
			r.next=0; 
		} else if (la->kind == 30 /* "PROCEDURE" */) {
			r.next=new DeclSeqProcDeclFwdDeclListMandatoryRecord(); abortIfNull(r.next); 
			DeclSeqProcDeclFwdDeclListMandatory(*(r.next));
		} else SynErr(88);
}

void Parser::ProcDecl(ProcDeclRecord &r) {
		identRec endName; 
		OptionalReceiver(r.optionalReceiver);
		IdentDef(r.identDef);
		OptionalFormalPars(r.optionalFormalPars);
		Expect(26 /* ";" */);
		r.declSeqPtr=new DeclSeqRecord(); abortIfNull(r.declSeqPtr); 
		DeclSeq(*(r.declSeqPtr));
		if (la->kind == 33 /* "END" */) {
			r.procBodySpecifiedHere=false; 
		} else if (la->kind == 32 /* "BEGIN" */) {
			r.procBodySpecifiedHere=true; 
			Get();
			StatementSeq(r.procBodyStmtSeq);
		} else SynErr(89);
		Expect(33 /* "END" */);
		Ident(endName);
		if(!coco_string_equal(endName, r.identDef.ident_)){
		Err(L"PROCEDURE identDef ... END ident: idents do not match."); 
		} 
		
}

void Parser::ForwardDecl(ForwardDeclRecord &r) {
		Expect(34 /* "^" */);
		OptionalReceiver(r.optionalReceiver);
		IdentDef(r.identDef);
		OptionalFormalPars(r.optionalFormalPars);
}

void Parser::DeclSeqProcDeclFwdDeclList(DeclSeqProcDeclFwdDeclListRecord &r) {
		if (la->kind == 32 /* "BEGIN" */ || la->kind == 33 /* "END" */) {
			r.specified=false; 
		} else if (la->kind == 30 /* "PROCEDURE" */) {
			r.specified=true; 
			DeclSeqProcDeclFwdDeclListMandatory(r.procDeclFwdDeclList);
		} else SynErr(90);
}

void Parser::DeclSeq(DeclSeqRecord &r) {
		DeclSeqConstTypeVarList(r.ctvlist);
		DeclSeqProcDeclFwdDeclList(r.pflist);
}

void Parser::IdentDef(IdentDefRecord &r) {
		IdentRec(r.ident_);
		if (StartOf(7)) {
			r.modifier=modifier_none; 
		} else if (la->kind == 18 /* "*" */) {
			Get();
			r.modifier=modifier_star; 
		} else if (la->kind == 16 /* "-" */) {
			Get();
			r.modifier=modifier_minus; 
		} else SynErr(91);
}
